# uao-ia-specialization-cloud-computing

./: .gitignore  README.md
Final Project/: deploy.py  instructions.txt  payload-pipeline.json  pyproject.toml
Final Project/house-pricing-dataset/: MLTable
Micro Project 2/: deployment.yaml
Micro Project 2/web-app/: Dockerfile  deployment.yaml  index.html  script.js  styles.css
