[tool.poetry]
name = "final project"
version = "0.1.0"
description = ""
authors = ["Dario Pareja <dpareja@nibbles.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.3"
watchdog = "2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
